@startuml

class ObjectsUtil {
    +{static} update(main: T, inject: T): T
    -{static} isDeepUpdateRequired(value: any): boolean
}
class Model {
    #options: SliderOptions
    -rangeSavedMin: number
    +selectPosition(value: number): Position
    +calcValue(ratio: number): number
    +isSameCurrent(value: number): boolean
    +willCurrentCollapse(position: Position, value: number): boolean
    +areCurrentEqual(): boolean
    +toggleRange(): void
    +toggleTooltip(): void
    +toggleOrientation(): void
    +toggleScale(): void
    +setCurrent(position: Position, current: number): void
    +getPoint(position: Position): PointData
    +getPoints(): MinMax<PointData>
    +getOptions(): SliderOptions
    +getSize(): number
    +isVertical(): boolean
    +isRange(): boolean
    +withTooltip(): boolean
    +withScale(): boolean
    +getCurrent(position: Position): number
    +getCurrents(): { [x: string]: number; min?: number; max?: number; }
    +getStep(): number
    +getBorder(position: Position): number
    #normalizeByStep(value: number): number
    -normalizeOrder(): void
    -normalizeSavedMin(): void
}
class SliderError extends Error {
    +name: string
}
class ValidModel extends Model {
    +setValidCurrent(current: number, position: Position): void
    +setValidCurrents(currentMin: number, currentMax: number): void
    +setValidStep(step: number): void
    +setValidBorders(borderMin: number, borderMax: number): void
    -validateOptions(): void
    -validateInBorderRange(current: number): void
    -isNotInBorderRange(value: number): boolean
    -validateRangeActive(): void
    -validateStep(step: number): void
    -validateDivision(current: number): void
    -isNotDivideToStepOrBorder(current: number): boolean
    -{static} validatePositiveRange(min: number, max: number): void
    -{static} validateBorders(borderMin: number, borderMax: number): void
}
class Observer {
    -events: Map<SliderEvent, NotifyCallback[]>
    +subscribe(event: SliderEvent, callback: NotifyCallback): void
    +notify(event: SliderEvent, data?: any): void
}
class CssClassUtil {
    +{static} MAIN_PREFIX: "slider"
    +{static} initClass(element: HTMLElement, isVertical: boolean, name?: ClassNames): void
    +{static} toggleOrientation(element: HTMLElement, name?: ClassNames): void
    +{static} toggleHidden(element: HTMLElement, name?: ClassNames): void
    +{static} addGrabbing(): void
    +{static} removeGrabbing(): void
    -{static} getFullName(name?: ClassNames): string
}
class PositionUtil {
    +{static} calc(isVertical: boolean, element: HTMLElement, event: MouseEvent): number
    -{static} calcForOwner(isVertical: boolean, element: HTMLElement, event: MouseEvent): number
}
class Tooltip {
    -element: HTMLElement
    +getElement(): HTMLElement
    +buildHtml(isVertical: boolean): HTMLElement
    +toggleHidden(): void
    +update(text: any, isVertical: boolean): void
    +toggleOrientation(): void
}
class Point extends Observer {
    -element: HTMLDivElement
    -moveDiff: { x: number; y: number; }
    -tooltip: Tooltip
    +buildHtml(isVertical: boolean): HTMLDivElement
    +getElement(): HTMLDivElement
    +startGrabbing(): void
    +updatePosition(isVertical: boolean, point: PointData): void
    +toggleHidden(): void
    +toggleTooltip(): void
    +toggleOrientation(): void
    -handlePointMouseDown: (event: MouseEvent) => void
    -updateMoveDiff(clientX: number, clientY: number): void
    -handleMouseUp: () => void
    -handleMouseMove: (event: MouseEvent) => void
    -calcAbsolute(isVertical: boolean, event: MouseEvent): number
}
class Range {
    -element: HTMLDivElement
    +buildHtml(isVertical: boolean): HTMLDivElement
    +getElement(): HTMLDivElement
    +updatePosition(isVertical: boolean, percent: MinMax<number>, height?: number): void
    +toggleOrientation(): void
}
class Body extends Observer {
    -element: HTMLElement
    -range: Range
    -points: MinMax<Point>
    -isMoveStarted: boolean
    +buildHtml(isVertical: boolean): HTMLElement
    +getElement(): HTMLElement
    +toggleRange(): void
    +toggleTooltip(): void
    +toggleOrientation(): void
    +updatePosition(isVertical: boolean, __1: MinMax<PointData>): void
    -updatePointPosition(isVertical: boolean, point: PointData, position: Position): number
    +startPointMove(): void
    -handleStopPointMove: () => void
    -handleMinPointMove: (calcAbsolute: CalcAbsolute) => void
    -handleMaxPointMove: (calcAbsolute: CalcAbsolute) => void
    -handleSliderBodyMouseDown: (event: MouseEvent) => void
    -isRangeOrBodyElement(event: Event): boolean
    -handlePointMove: (calcAbsolute: CalcAbsolute, position?: Position) => void
    -calcValue(isVertical: boolean, coordinate: number): number
}
class Scale extends Observer {
    -element: HTMLElement
    +buildHtml(isVertical: boolean): HTMLElement
    +getElement(): HTMLElement
    +toggleHidden(): void
    +toggleOrientation(): void
    +updateLines(step: number, size: number, isVertical: boolean): void
    -handleScaleMouseDown: (event: MouseEvent) => void
    -{static} buildLineHtml(isVertical: boolean, index: number, gap: number): HTMLDivElement
    -{static} calcGapAndCount(childCount: number, elementSize: number, modelStep: number, modelSize: number): { percentGap: number; visibleCount: number; }
}
class View extends Observer {
    -element: HTMLElement
    -body: Body
    -scale: Scale
    +render(__0: ViewOptions): void
    +toggleRange(): void
    +toggleTooltip(): void
    +toggleScale(): void
    +toggleOrientation(): void
    +updateScaleLines(step: number, size: number, isVertical: boolean): void
    +updateCurrent(isVertical: boolean, points: MinMax<PointData>): void
    -handlePointMove: (calcPoint: CalcPoint) => void
    -handleScaleClick: (calcRatio: CalcRatio) => void
    -handleBodyClick: (calcRatio: CalcRatio) => void
}
class Presenter extends Observer {
    #model: Model
    #view: View
    +init(parent: HTMLElement): void
    #notifyValueChanged(): void
    -updateCurrent(modelValue: number, position: Position): void
    -handleSliderClick: (calcRatio: CalcRatio) => void
    -handlePointMove: (calcPoint: CalcPoint) => void
}
class PresenterProxy extends Presenter {
    #model: ValidModel
    +getOptions(): SliderOptions
    +addSlideListener(callback: (data: MinMax<number>) => void): void
    +setCurrentRange(valueMin: number, valueMax: number): void
    +setCurrentRangeMin(value: number): void
    +setCurrentRangeMax(value: number): void
    +setCurrent(value: number): void
    +setStep(step: number): void
    +setBorderMin(value: number): void
    +setBorderMax(value: number): void
    +setBorders(borderMin: number, borderMax: number): void
    +toggleRange(): void
    +toggleScale(): void
    +toggleTooltip(): void
    +toggleOrientation(): void
    -updateScaleLines(): void
}
interface SliderCommon {
    +toggleRange(): void
    +toggleScale(): void
    +toggleTooltip(): void
    +toggleOrientation(): void
    +addSlideListener(callback: (currents: MinMax<number>) => void): void
    +setCurrentRangeMin(value: number): void
    +setCurrentRangeMax(value: number): void
    +setCurrent(value: number): void
    +setCurrentRange(valueMin: number, valueMax: number): void
    +setStep(step: number): void
    +setBorderMin(value: number): void
    +setBorderMax(value: number): void
    +setBorders(borderMin: number, borderMax: number): void
}
interface Slider extends SliderCommon {
    +getOptions(): SliderOptions
}
interface SliderGroup extends SliderCommon {
    +getSlider(index: number): Slider
    +getElementsQuery(): JQuery<HTMLElement>
    +getOptions(): SliderOptions[]
    +size(): number
}
class SliderPlugin extends PresenterProxy implements Slider

View..>CssClassUtil
Body..>CssClassUtil
Range..>CssClassUtil
Scale..>CssClassUtil
Tooltip..>CssClassUtil

Scale..>PositionUtil
Body..>PositionUtil

Model..>ObjectsUtil

PresenterProxy..>SliderError
ValidModel..>SliderError

Presenter o-- Model
Presenter o-- View
PresenterProxy o-- ValidModel

SliderPlugin ..> ValidModel
SliderPlugin ..> View
View o-- Body
View o-- Scale
Body o-- Point
Body o-- Range
Point o-- Tooltip

@enduml
